# phxnorth-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  database.py  logging_config.py  main.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  career.py  cv.py  disc.py  events.py  health.py  questions.py  risk.py  router.py  webhooks.py
app/api/v1/schemas/: __init__.py  admin.py  auth.py  career.py  cv.py  disc.py  events.py  questions.py  risk.py  webhooks.py
app/cache/: __init__.py  dedup.py  disc_cache.py  redis_client.py  risk_cache.py
app/core/: __init__.py  exceptions.py  security.py
app/kafka/: __init__.py  consumer.py  dlq.py  event_consumer.py  producer.py  schemas.py  topics.py
app/models/: __init__.py  base.py  behavioral.py  career.py  disc.py  user.py  webhook.py  webhook_delivery.py
app/services/cv_parser/: __init__.py  parser.py
app/services/cv_parser/analytics/: __init__.py  career_analytics.py  (+1 more)
app/services/disc_scorer/: __init__.py  preference_inference.py  scorer.py  shift_detector.py  windows.py  worker.py
app/services/llm/: __init__.py  client.py
app/services/risk_analyzer/: __init__.py  contradiction_detector.py  red_flag_engine.py  risk_predictor.py  worker.py
app/services/signal_extractor/: README.md  __init__.py  worker.py
app/services/webhook/: __init__.py  dispatcher.py
app/workers/: __init__.py  celery_app.py  cv_parser_task.py  disc_scorer_task.py  metric_aggregator_task.py  risk_analyzer_task.py  schedule.py  signal_extractor_task.py  webhook_dispatcher_task.py
docs/superpowers/plans/: 2026-04-12-chat-behavioral-signals.md
docs/superpowers/specs/: 2026-04-12-chat-behavioral-signals-design.md
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: backup-db.sh  deploy.sh  health-check.sh
tests/: conftest.py  test_health.py
tests/api/v1/: test_auth.py  test_disc_api.py  test_events_api.py  test_questions.py  test_risk_api.py
tests/cache/: test_disc_cache.py
tests/kafka/: test_dlq.py
tests/models/: __init__.py  conftest.py  test_behavioral.py  test_career.py  test_disc.py  test_user.py
tests/services/: test_disc_pipeline.py
tests/services/cv_parser/: test_parser.py
tests/services/disc_scorer/: test_windows.py  test_worker.py
tests/services/risk_analyzer/: test_contradiction_detector.py  test_red_flag_engine.py  test_risk_pipeline.py
tests/services/signal_extractor/: test_worker.py
tests/services/webhook/: test_dispatcher.py
(+25 files in other folders)
